--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="picture"><!--聊天消息复制这个-->
 	<img src="img/head.jpg" class="head" /><!--头像-->
 	<div class="white"></div>
-	<div><a class="text" href="https://codellllllliiiiiii.github.io">www.dilihentai.com</a></div>
+	<div><a class="text" href="http://t.cn/AieZLhFA">www.dilihentai.com</a></div>
 </div>
 
 <script type="text/javascript">
